<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="ocultarTeclado"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="327dp"
        android:layout_height="181dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/logoppal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="308dp"
        android:layout_height="69dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Introduzca el email:"
            android:textAlignment="textStart" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="308dp"
        android:layout_height="69dp"
        android:layout_marginBottom="260dp"
        android:layout_weight="2"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2">

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="Introduzca la contraseña:"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#FFAB40"
        app:cornerRadius="20dp"
        android:text="@string/iniciar_sesi_n"
        app:layout_constraintBottom_toBottomOf="@+id/btnRegistro"
        app:layout_constraintEnd_toStartOf="@+id/btnRegistro"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnRegistro"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_weight="2"
        android:backgroundTint="#FFAB40"
        app:cornerRadius="20dp"
        android:text="Registrate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        app:layout_constraintVertical_bias="0.288" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="2"
        android:text="@string/no_tienes_cuenta"
        android:textColor="#252424"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistro"
        app:layout_constraintEnd_toEndOf="@+id/btnRegistro"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

    <FrameLayout
        android:id="@+id/frameLayoutRegistro"
        android:layout_width="387dp"
        android:layout_height="457dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="123dp"
        android:layout_weight="1"
        android:background="#F1EEEE"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_close"
            android:layout_width="35dp"
            android:layout_height="37dp"
            android:layout_gravity="right"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#FFAB40"
            android:text="@string/x"
            app:cornerRadius="20dp" />

    </FrameLayout>

    <ImageButton
        android:id="@+id/imInst"
        android:layout_width="27dp"
        android:layout_height="29dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintEnd_toStartOf="@+id/imTw"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imFac"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:srcCompat="@drawable/ic_iconmonstr_instagram_14" />


    <ImageButton
        android:id="@+id/imFac"
        android:layout_width="27dp"
        android:layout_height="29dp"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintEnd_toStartOf="@+id/imInst"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imInst"
        app:srcCompat="@drawable/ic_iconmonstr_facebook_4" />

    <ImageButton
        android:id="@+id/imTw"
        android:layout_width="27dp"
        android:layout_height="29dp"
        android:backgroundTint="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imInst"
        app:layout_constraintTop_toTopOf="@+id/imInst"
        app:srcCompat="@drawable/ic_iconmonstr_twitter_4" />


</androidx.constraintlayout.widget.ConstraintLayout>